<?xml version="1.0"?>
<package format="2">
  <name>d_moveit_grasp</name>
  <version>0.0.0</version>
  <description>The d_moveit_graps package</description>
  <maintainer email="rafaelrojas@todo.todo">rafaelrojas</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>Eigen3</depend>
  <depend>moveit_core</depend>
  <depend>moveit_graps</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
