<?xml version="1.0"?>
<package format="2">
  <name>a_move_group_minimal</name>
  <version>0.0.0</version>
  <description>The a_move_group_minimal package</description>
  <maintainer email="Administrator@todo.todo">Administrator</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
